--- a/HeartDiseasePrediction.ipynb
+++ b/HeartDiseasePrediction.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {
         "id": "SQduMELuResB"
       },
@@ -13,9 +13,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.metrics import precision_score\n",
-        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import accuracy_score,precision_score, confusion_matrix\n",
         "from sklearn.model_selection import train_test_split\n",
         "import warnings\n",
         "warnings.simplefilter(\"ignore\")"
@@ -23,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -176,7 +174,7 @@
               "4   3     2       0  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
